# cover_lettered

./: .gitignore  README.md  ai.py  ai_api.py  app.py  compose.yaml  cover_letter.txt  dockerfile  print_key.py  pyproject.toml  requirements.txt  resume.txt
instance/: users.sqlite3
website/: __init__.py  auth.py  info.py  models.py  read_doc.py  uploads.py  views.py
website/templates/: about.html.j2  ask.html.j2  cover_letter.html.j2  demo.html.j2  home.html.j2  layout.html.j2  letter_builder.html.j2  login.html.j2  profile.html.j2  resume.html.j2  sign-up.html.j2  upload_resume.html.j2
